@@ -189,51 +189,15 @@ public class VFSFile implements Serializable
 	//}}}
 
 	//{{{ Instance variables
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public String name;
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public String path;
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public String symlinkPath;
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public String deletePath;
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public int type;
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public long length;
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public boolean hidden;
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public boolean canRead;
-	/**
-	 * @deprecated Use the accessor/mutator methods instead.
-	 */
-	@Deprecated
-	public boolean canWrite;
+	private String name;
+	private String path;
+	private String symlinkPath;
+	private String deletePath;
+	private int type;
+	private long length;
+	private boolean hidden;
+	private boolean canRead;
+	private boolean canWrite;
 	//}}}
 
 	//{{{ VFSFile constructor
